<resources>
    <string name="app_name">Madiyar</string>
    <string name="logo_temp">Logo Temp</string>
    <string name="slogan_big">Заказывайте продукты прямо со двора</string>
    <string name="slogan_small">Подключайся и будь на связи.</string>
    <string name="enter">Войти</string>
    <string name="not_registered">Нет аккаунта?</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="sms_code">Код из смс</string>
    <string name="send_code_again">Отправить еще раз</string>
    <string name="send_code">Отправить</string>
    <string name="confirm">Подтвердить</string>
    <string name="new_password">Новый пароль</string>
    <string name="tv_new_password_info">Введите новый пароль. Вы сразу авторизуетесь в приложении.</string>
    <string name="enter_city">Укажите ваш город</string>
    <string name="lets_begin_registration">Давайте начнем процесс регистрации с вашего города, чтобы загрузить карту</string>
    <string name="next">Далее</string>
    <string name="image_description">Не удалось загрузить</string>
    <string-array name="cities">
        <item>Алматы</item>
        <item>Астана</item>
        <item>Каскелен</item>
        <item>Костанай</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="specify_address">Укажите адрес</string>
    <string name="usage_condition">Нажимая Зарегистрироваться, я принимаю Условия использования и мною прочитана политика конфиденциальности.</string>
    <string name="sms_confirm">Мы отправим вам смс с кодом подтверждения</string>
    <string name="register">Зарегистрироваться</string>
    <string name="phone_number">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="home_address">Домашний адрес</string>
    <string name="apartment_number">Номер квартиры</string>
    <string name="additional_description">Дополнительное описание. Как проще до вас добраться?</string>
    <string name="your_name">Ваше имя</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="shop_image">SHOP IMAGE</string>
    <string name="your_email">Ваша почта</string>
    <string name="change_password">Изменить пароль</string>
</resources>