<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.madiyar.registrationandauth.FinalRegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/iv_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shop_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="39dp"
            app:layout_constraintCircleRadius="30dp"
            app:srcCompat="@drawable/shop" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="45dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_shop">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/iv_shop">
        </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="45dp"
            app:layout_constraintTop_toBottomOf="@+id/til_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true">
        </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="45dp"
            app:layout_constraintTop_toBottomOf="@+id/til_email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_usage_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usage_condition"
            android:textColor="#1D1D1B"
            android:paddingHorizontal="3dp"
            android:textSize="12sp"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password" />

        <TextView
            android:id="@+id/tv_sms_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms_confirm"
            android:textAlignment="center"
            android:textColor="#1D1D1B"
            android:textSize="14sp"
            android:layout_marginTop="34dp"
            android:layout_marginHorizontal="54dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_usage_condition" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/register"
            android:background="@drawable/button_blue_bg"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@android:color/white"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sms_confirm" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>