<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="titleFragment"
            type="com.example.madiyar.registrationandauth.StartFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/start_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registrationandauth.StartFragment">


        <TextView
            android:id="@+id/tv_logo_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo_temp"
            android:textColor="#1D1D1B"
            android:textFontWeight="800"
            android:textSize="36sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="top"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="p" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="29dp"
            android:background="#00000000"
            android:contentDescription="@string/image_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_logo_temp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tv_slogan_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="57dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/slogan_big"
            android:textColor="#1D1D1B"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <TextView
            android:id="@+id/tv_slogan_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="10dp"


            android:fontFamily="@font/montserrat_bold"
            android:text="@string/slogan_small"
            android:textColor="#1D1D1B"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_slogan_big" />

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/button_white_bg"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/enter"
            android:textSize="18sp"
            android:layout_marginTop="74dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_slogan_small" />

        <TextView
            android:id="@+id/tv_not_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/not_registered"
            android:textAlignment="center"
            android:textColor="#1394CC"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_enter" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>