<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.madiyar.registrationandauth.AddressFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="15dp"
        android:layout_marginTop="83dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="375dp">
            <TextView
                android:id="@+id/tv_specify_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/specify_address"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="24sp"
                android:textColor="#1D1D1B"
                android:layout_marginTop="25dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_home_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_specify_address" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_home_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/home_address"
                android:fontFamily="@font/montserrat_regular"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_specify_address" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_apartment_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                card_view:layout_constraintTop_toBottomOf="@+id/til_home_address" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_apartment_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apartment_number"
                android:fontFamily="@font/montserrat_regular"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                card_view:layout_constraintTop_toBottomOf="@+id/et_home_address" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_additional_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                card_view:layout_constraintTop_toBottomOf="@+id/til_apartment_number" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_additional_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/additional_description"
                android:fontFamily="@font/montserrat_regular"
                android:inputType="text"
                android:maxLines="3"
                android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="@drawable/button_blue_bg"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="35dp"
                android:layout_marginHorizontal="16dp"
                card_view:layout_constraintTop_toBottomOf="@+id/til_additional_description" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>